# langchain-projects

./: .gitignore  analyze_takeout.py  app_backend.py  caption_media.py  check_real_exif.py  clean_phone_import_dupes.py  clean_picasa_files.py  cluster_faces.py  create_database.py  daily_immich_merge.sh  detect_faces.py  extract_metadata.py  find_duplicates.py  fix_no_exif_dates.py  hybrid_llm.py  index.html  merge_dry_run.py  merge_execute.py  merge_immich_uploads.py  pyproject.toml  quarantine_stage1.py  resolve_duplicates.py  stage2_report.py  test_insightface.py  test_langchain.py  verify_dup_pattern.py
