[project]
name = "langchain-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "exifread>=3.5.1",
    "insightface>=1.0.1",
    "langchain>=1.3.13",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "numpy>=2.5.1",
    "onnxruntime-gpu>=1.27.0",
    "opencv-python-headless>=5.0.0.93",
    "pillow>=12.3.0",
    "pillow-heif>=1.4.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
]
